--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,9 +1,5 @@
 @import '../sass/variables.scss';
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 .App {
   position: relative;
   height: 100vh;
@@ -15,14 +11,15 @@
     height: 13vh;
     width: 100%;
     color: $fontcolor;
-    background-color: blue;
+    background-color: $maincolor;
   }
   main{
     display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     padding: 20px;
     height: 75vh;
-    justify-self: center;
+    align-items: center;
     width: 80vw;
     margin: 1vh auto;
     box-shadow: $darknesscolor 2px 2px 8px;
