--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -16,6 +16,7 @@ $color-contrast-2: #D09C00;
 $color-contrast-3: #785A00;
 $color-contrast-4: #3F3000;
 
+$fontmin: 0.7em;
 $fontbasic: 1em;
 $fonttiny: 1.7em;
 $fontsmall: 2em;
