--- a/src/containers/Table/Table.scss
+++ b/src/containers/Table/Table.scss
@@ -6,8 +6,8 @@
   table {
     max-height: 100%;
     margin-bottom: 1rem;
-    border: 1px solid #f2f2f2;
-    border-bottom: 2px double #f2f2f2;
+    border: 1px solid $shadowcartcolor;
+    border-bottom: 2px double $shadowcartcolor;
     border-collapse: collapse;
   }
   th,
@@ -17,7 +17,7 @@
 
   thead {
     background-color: $maincolor;
-    color: white;
+    color: $fontcolor;
     font-size: $fontbasic;
     font-weight: 900;
     border-top-left-radius: 10px;
@@ -29,10 +29,104 @@
       &:first-child {
         border-left: none;
       }
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.05);
+      }
     }
   }
-  tbody{
+  tbody {
     color: black;
     font-size: $fontmin;
+  }
+}
+@media (max-width: 767px) {
+  .Table {
+    width: 100%;
+
+    th,
+    td {
+      padding: 2px;
+    }
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+      display: block;
+    }
+
+    /* Hide table headers (but not display: none;, for accessibility) */
+    thead tr {
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
+
+    tr {
+      border: 1px solid #ccc;
+    }
+
+    td {
+      /* Behave  like a "row" */
+      border: none;
+      border-bottom: 1px solid #eee;
+      position: relative;
+      padding-left: 50%;
+      &:first-child {
+        font-weight: 700;
+      }
+    }
+
+    td:before {
+      /* Now like a table header */
+      position: absolute;
+      /* Top/left values mimic padding */
+      top: 6px;
+      left: 6px;
+      width: 45%;
+      padding-right: 10px;
+      white-space: nowrap;
+    }
+
+    /*
+    Label the data
+    */
+    td:nth-of-type(1):before {
+      content: "ID:";
+    }
+    td:nth-of-type(2):before {
+      content: "Name:";
+    }
+    td:nth-of-type(3):before {
+      content: "City:";
+    }
+    td:nth-of-type(4):before {
+      content: "Total:";
+    }
+    td:nth-of-type(5):before {
+      content: "Avarege:";
+    }
+    td:nth-of-type(6):before {
+      content: "Last Month";
+    }
+    /* Hide table headers (but not display: none;, for accessibility) */
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .Table {
+    th,
+    td {
+      padding: 2px 15px 2px 5px;
+    }
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .Table {
+    th,
+    td {
+      padding: 4px 25px 4px 10px;
+    }
   }
 }
